src/y.output
   0  $accept : program $end

   1  program : header_program '{' ejecucion '}'
   2          | header_program
   3          | header_program '{' ejecucion
   4          | header_program '{' '}'

   5  header_program : ID

   6  declaracion_variables : tipo lista_variables ';'
   7                        | definicion_constante ';'
   8                        | lista_variables ';'
   9                        | lista_variables

  10  lista_variables : lista_variables ',' ID
  11                  | ID

  12  sentencia_declarable : declaracion_variables
  13                       | funcion
  14                       | diferimiento

  15  funcion : header_funcion ejecucion_funcion
  16          | header_funcion

  17  header_funcion : FUN ID '(' lista_parametros ')' ':' tipo
  18                 | FUN ID '(' ')' ':' tipo
  19                 | FUN '(' lista_parametros ')' ':' tipo
  20                 | FUN '(' ')' ':' tipo
  21                 | FUN ID '(' lista_parametros ')' tipo

  22  lista_parametros : parametro
  23                   | parametro ',' parametro

  24  parametro : tipo ID
  25            | ID
  26            | tipo

  27  tipo : ENTERO
  28       | DOUBLE

  29  ejecucion_funcion : '{' bloque_funcion RETURN '(' expresion ')' ';' '}' ';'
  30                    | '{' RETURN '(' expresion ')' ';' '}' ';'
  31                    | '{' bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion '}'
  32                    | '{' bloque_funcion RETURN '(' expresion ')' ';'
  33                    | '{' bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion
  34                    | '{' bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion
  35                    | '{' bloque_funcion RETURN expresion ';'
  36                    | '{' bloque_funcion RETURN expresion ';' bloque_funcion
  37                    | '{' bloque_funcion RETURN expresion ';' '}'
  38                    | '{' bloque_funcion RETURN expresion ';' bloque_funcion '}'
  39                    | '{' bloque_funcion RETURN expresion ';'
  40                    | '{' bloque_funcion RETURN expresion ';' bloque_funcion
  41                    | '{' bloque_funcion RETURN '(' ')' ';' '}'
  42                    | '{' bloque_funcion RETURN '(' ')' ';' bloque_funcion '}'
  43                    | '{' bloque_funcion RETURN '(' ')' ';'
  44                    | '{' '}'
  45                    | '{'
  46                    | '{' RETURN ';' '}'
  47                    | '{' RETURN ';' bloque_funcion '}'
  48                    | '{' RETURN ';'
  49                    | '{' RETURN ';' bloque_funcion
  50                    | '{' RETURN '(' expresion ')' ';' bloque_funcion
  51                    | '{' RETURN '(' expresion ')' ';'
  52                    | '{' RETURN '(' ')' ';' '}'
  53                    | '{' RETURN '(' ')' ';'

  54  bloque_funcion : bloque_funcion sentencia_funcion
  55                 | sentencia_funcion

  56  sentencia_funcion : sentencia
  57                    | seleccion_funcion
  58                    | seleccion_when_funcion
  59                    | iteracion_while_funcion

  60  seleccion_funcion : IF condicion_salto_if then_seleccion_funcion ENDIF
  61                    | IF condicion_salto_if then_seleccion_funcion else_seleccion_funcion ENDIF

  62  then_seleccion_funcion : THEN '{' ejecucion_control RETURN '(' expresion ')' '}' ';'
  63                         | THEN RETURN '(' expresion ')' ';'

  64  else_seleccion_funcion : ELSE '{' ejecucion_control RETURN '(' expresion ')' '}' ';'
  65                         | ELSE RETURN '(' expresion ')' ';'

  66  seleccion_when_funcion : WHEN '(' comparacion_bool ')' THEN '{' ejecucion_control RETURN '(' expresion ')' '}' ';'
  67                         | WHEN '(' comparacion_bool ')' THEN RETURN '(' expresion ')' ';'

  68  iteracion_while_funcion : WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion RETURN '(' expresion ')' '}' ';'
  69                          | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion RETURN '(' expresion ')' '}' ';'

  70  diferimiento : DEFER sentencia_ejecutable

  71  ejecucion_control : ejecucion_control sentencia_ejecutable
  72                    | sentencia_ejecutable

  73  ejecucion : ejecucion sentencia
  74            | sentencia

  75  sentencia : sentencia_ejecutable
  76            | sentencia_declarable

  77  sentencia_ejecutable : asignacion ';'
  78                       | seleccion ';'
  79                       | impresion ';'
  80                       | seleccion_when ';'
  81                       | iteracion_while ';'
  82                       | error ';'

  83  seleccion_when : WHEN '(' comparacion_bool ')' THEN '{' ejecucion_control '}' ';'
  84                 | WHEN '(' comparacion_bool ')' THEN sentencia_ejecutable ';'

  85  iteracion_while : WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  86                  | WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'
  87                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'
  88                  | ID ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'

  89  seleccion_iteracion : IF condicion_salto_if then_seleccion_iteracion ENDIF
  90                      | IF condicion_salto_if then_seleccion_iteracion else_seleccion_iteracion ENDIF

  91  then_seleccion_iteracion : THEN '{' ejecucion_iteracion '}' ';'
  92                           | THEN break ';'

  93  else_seleccion_iteracion : ELSE '{' ejecucion_iteracion '}' ';'
  94                           | ELSE RETURN '(' expresion ')' ';'
  95                           | ELSE RETURN '(' ')' ';'
  96                           | ELSE RETURN '(' expresion ')'
  97                           | ELSE RETURN ';'
  98                           | ELSE RETURN
  99                           | ELSE '{' ejecucion_iteracion '}'
 100                           | ELSE '{' ejecucion_iteracion
 101                           | ELSE ejecucion_iteracion ';'

 102  seleccion_when_iteracion : WHEN '(' comparacion_bool ')' THEN '{' ejecucion_iteracion '}' ';'
 103                           | WHEN '(' comparacion_bool ')' THEN break ';'

 104  ejecucion_iteracion : ejecucion_iteracion sentencia_iteracion
 105                      | sentencia_iteracion

 106  sentencia_iteracion : asignacion ';'
 107                      | seleccion_iteracion ';'
 108                      | impresion ';'
 109                      | seleccion_when_iteracion ';'
 110                      | iteracion_while ';'
 111                      | break ';'

 112  break : BREAK
 113        | BREAK ID

 114  seleccion : IF condicion_salto_if then_seleccion ENDIF
 115            | IF condicion_salto_if then_seleccion else_seleccion ENDIF
 116            | IF condicion_salto_if '{' ejecucion_control '}' else_seleccion ENDIF
 117            | IF condicion_salto_if then_seleccion '{' ejecucion_control '}' ENDIF
 118            | IF condicion_salto_if THEN ENDIF
 119            | IF condicion_salto_if then_seleccion ELSE ENDIF
 120            | IF condicion_salto_if THEN else_seleccion ENDIF

 121  then_seleccion : THEN '{' ejecucion_control '}' ';'
 122                 | THEN sentencia_ejecutable ';'

 123  else_seleccion : ELSE '{' ejecucion_control '}' ';'
 124                 | ELSE sentencia_ejecutable ';'
 125                 | ELSE '{' '}' ';'
 126                 | ELSE ejecucion_control '}' ';'

 127  condicion_salto_if : '(' comparacion_bool ')'
 128                     | comparacion_bool ')'
 129                     | '(' comparacion_bool
 130                     | comparacion_bool
 131                     | '(' ')'

 132  comparacion_bool : expresion comparador expresion
 133                   | expresion comparador
 134                   | comparador expresion
 135                   | comparador

 136  comparador : '>'
 137             | '<'
 138             | '='
 139             | MAYOR_IGUAL
 140             | MENOR_IGUAL
 141             | DISTINTO

 142  lista_asignaciones : lista_asignaciones asignacion
 143                     | asignacion

 144  definicion_constante : CONST lista_asignaciones

 145  asignacion : ID ASIGNACION expresion

 146  expresion : expresion '+' termino
 147            | expresion '-' termino
 148            | termino
 149            | tipo '(' expresion '+' termino ')'
 150            | tipo '(' expresion '-' termino ')'
 151            | tipo '(' termino ')'
 152            | tipo '(' expresion '+' ')'
 153            | tipo '(' expresion '-' ')'

 154  termino : termino '*' factor
 155          | termino '/' factor
 156          | factor

 157  combinacion_terminales : ID
 158                         | CTE
 159                         | '-' CTE

 160  factor : combinacion_terminales
 161         | ID '(' combinacion_terminales ',' combinacion_terminales ')'
 162         | ID '(' combinacion_terminales ')'
 163         | ID '(' ')'

 164  impresion : OUT '(' CADENA ')' ';'
 165            | OUT '(' ')'
 166            | OUT
 167            | OUT CADENA

state 0
	$accept : . program $end  (0)

	ID  shift 1
	.  error

	program  goto 2
	header_program  goto 3


state 1
	header_program : ID .  (5)

	.  reduce 5


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : header_program . '{' ejecucion '}'  (1)
	program : header_program .  (2)
	program : header_program . '{' ejecucion  (3)
	program : header_program . '{' '}'  (4)

	'{'  shift 4
	$end  reduce 2


state 4
	program : header_program '{' . ejecucion '}'  (1)
	program : header_program '{' . ejecucion  (3)
	program : header_program '{' . '}'  (4)

	error  shift 5
	ID  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	WHEN  shift 10
	WHILE  shift 11
	ENTERO  shift 12
	DOUBLE  shift 13
	CONST  shift 14
	DEFER  shift 15
	'}'  shift 16
	.  error

	ejecucion  goto 17
	declaracion_variables  goto 18
	tipo  goto 19
	lista_variables  goto 20
	definicion_constante  goto 21
	sentencia_declarable  goto 22
	funcion  goto 23
	diferimiento  goto 24
	header_funcion  goto 25
	sentencia  goto 26
	asignacion  goto 27
	sentencia_ejecutable  goto 28
	seleccion  goto 29
	impresion  goto 30
	seleccion_when  goto 31
	iteracion_while  goto 32


state 5
	sentencia_ejecutable : error . ';'  (82)

	';'  shift 33
	.  error


state 6
	lista_variables : ID .  (11)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (87)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (88)
	asignacion : ID . ASIGNACION expresion  (145)

	ASIGNACION  shift 34
	':'  shift 35
	$end  reduce 11
	error  reduce 11
	ID  reduce 11
	IF  reduce 11
	OUT  reduce 11
	FUN  reduce 11
	WHEN  reduce 11
	WHILE  reduce 11
	ENTERO  reduce 11
	DOUBLE  reduce 11
	CONST  reduce 11
	DEFER  reduce 11
	'}'  reduce 11
	';'  reduce 11
	','  reduce 11


state 7
	seleccion : IF . condicion_salto_if then_seleccion ENDIF  (114)
	seleccion : IF . condicion_salto_if then_seleccion else_seleccion ENDIF  (115)
	seleccion : IF . condicion_salto_if '{' ejecucion_control '}' else_seleccion ENDIF  (116)
	seleccion : IF . condicion_salto_if then_seleccion '{' ejecucion_control '}' ENDIF  (117)
	seleccion : IF . condicion_salto_if THEN ENDIF  (118)
	seleccion : IF . condicion_salto_if then_seleccion ELSE ENDIF  (119)
	seleccion : IF . condicion_salto_if THEN else_seleccion ENDIF  (120)

	ID  shift 36
	CTE  shift 37
	MAYOR_IGUAL  shift 38
	MENOR_IGUAL  shift 39
	DISTINTO  shift 40
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	'('  shift 42
	'>'  shift 43
	'<'  shift 44
	'='  shift 45
	.  error

	tipo  goto 46
	expresion  goto 47
	condicion_salto_if  goto 48
	comparacion_bool  goto 49
	comparador  goto 50
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 8
	impresion : OUT . '(' CADENA ')' ';'  (164)
	impresion : OUT . '(' ')'  (165)
	impresion : OUT .  (166)
	impresion : OUT . CADENA  (167)

	CADENA  shift 54
	'('  shift 55
	';'  reduce 166


state 9
	header_funcion : FUN . ID '(' lista_parametros ')' ':' tipo  (17)
	header_funcion : FUN . ID '(' ')' ':' tipo  (18)
	header_funcion : FUN . '(' lista_parametros ')' ':' tipo  (19)
	header_funcion : FUN . '(' ')' ':' tipo  (20)
	header_funcion : FUN . ID '(' lista_parametros ')' tipo  (21)

	ID  shift 56
	'('  shift 57
	.  error


state 10
	seleccion_when : WHEN . '(' comparacion_bool ')' THEN '{' ejecucion_control '}' ';'  (83)
	seleccion_when : WHEN . '(' comparacion_bool ')' THEN sentencia_ejecutable ';'  (84)

	'('  shift 58
	.  error


state 11
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (85)
	iteracion_while : WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (86)

	'('  shift 59
	.  error


state 12
	tipo : ENTERO .  (27)

	.  reduce 27


state 13
	tipo : DOUBLE .  (28)

	.  reduce 28


state 14
	definicion_constante : CONST . lista_asignaciones  (144)

	ID  shift 60
	.  error

	asignacion  goto 61
	lista_asignaciones  goto 62


state 15
	diferimiento : DEFER . sentencia_ejecutable  (70)

	error  shift 5
	ID  shift 63
	IF  shift 7
	OUT  shift 8
	WHEN  shift 10
	WHILE  shift 11
	.  error

	asignacion  goto 27
	sentencia_ejecutable  goto 64
	seleccion  goto 29
	impresion  goto 30
	seleccion_when  goto 31
	iteracion_while  goto 32


state 16
	program : header_program '{' '}' .  (4)

	.  reduce 4


state 17
	program : header_program '{' ejecucion . '}'  (1)
	program : header_program '{' ejecucion .  (3)
	ejecucion : ejecucion . sentencia  (73)

	error  shift 5
	ID  shift 6
	IF  shift 7
	OUT  shift 8
	FUN  shift 9
	WHEN  shift 10
	WHILE  shift 11
	ENTERO  shift 12
	DOUBLE  shift 13
	CONST  shift 14
	DEFER  shift 15
	'}'  shift 65
	$end  reduce 3

	declaracion_variables  goto 18
	tipo  goto 19
	lista_variables  goto 20
	definicion_constante  goto 21
	sentencia_declarable  goto 22
	funcion  goto 23
	diferimiento  goto 24
	header_funcion  goto 25
	sentencia  goto 66
	asignacion  goto 27
	sentencia_ejecutable  goto 28
	seleccion  goto 29
	impresion  goto 30
	seleccion_when  goto 31
	iteracion_while  goto 32


state 18
	sentencia_declarable : declaracion_variables .  (12)

	.  reduce 12


state 19
	declaracion_variables : tipo . lista_variables ';'  (6)

	ID  shift 67
	.  error

	lista_variables  goto 68


state 20
	declaracion_variables : lista_variables . ';'  (8)
	declaracion_variables : lista_variables .  (9)
	lista_variables : lista_variables . ',' ID  (10)

	';'  shift 69
	','  shift 70
	$end  reduce 9
	error  reduce 9
	ID  reduce 9
	IF  reduce 9
	OUT  reduce 9
	FUN  reduce 9
	RETURN  reduce 9
	WHEN  reduce 9
	WHILE  reduce 9
	ENTERO  reduce 9
	DOUBLE  reduce 9
	CONST  reduce 9
	DEFER  reduce 9
	'}'  reduce 9


state 21
	declaracion_variables : definicion_constante . ';'  (7)

	';'  shift 71
	.  error


state 22
	sentencia : sentencia_declarable .  (76)

	.  reduce 76


state 23
	sentencia_declarable : funcion .  (13)

	.  reduce 13


state 24
	sentencia_declarable : diferimiento .  (14)

	.  reduce 14


state 25
	funcion : header_funcion . ejecucion_funcion  (15)
	funcion : header_funcion .  (16)

	'{'  shift 72
	$end  reduce 16
	error  reduce 16
	ID  reduce 16
	IF  reduce 16
	OUT  reduce 16
	FUN  reduce 16
	RETURN  reduce 16
	WHEN  reduce 16
	WHILE  reduce 16
	ENTERO  reduce 16
	DOUBLE  reduce 16
	CONST  reduce 16
	DEFER  reduce 16
	'}'  reduce 16

	ejecucion_funcion  goto 73


state 26
	ejecucion : sentencia .  (74)

	.  reduce 74


state 27
	sentencia_ejecutable : asignacion . ';'  (77)

	';'  shift 74
	.  error


state 28
	sentencia : sentencia_ejecutable .  (75)

	.  reduce 75


state 29
	sentencia_ejecutable : seleccion . ';'  (78)

	';'  shift 75
	.  error


state 30
	sentencia_ejecutable : impresion . ';'  (79)

	';'  shift 76
	.  error


state 31
	sentencia_ejecutable : seleccion_when . ';'  (80)

	';'  shift 77
	.  error


state 32
	sentencia_ejecutable : iteracion_while . ';'  (81)

	';'  shift 78
	.  error


state 33
	sentencia_ejecutable : error ';' .  (82)

	.  reduce 82


state 34
	asignacion : ID ASIGNACION . expresion  (145)

	ID  shift 36
	CTE  shift 37
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	.  error

	tipo  goto 46
	expresion  goto 79
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 35
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (87)
	iteracion_while : ID ':' . WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (88)

	WHILE  shift 80
	.  error


state 36
	combinacion_terminales : ID .  (157)
	factor : ID . '(' combinacion_terminales ',' combinacion_terminales ')'  (161)
	factor : ID . '(' combinacion_terminales ')'  (162)
	factor : ID . '(' ')'  (163)

	'('  shift 81
	ID  reduce 157
	THEN  reduce 157
	MAYOR_IGUAL  reduce 157
	MENOR_IGUAL  reduce 157
	DISTINTO  reduce 157
	'+'  reduce 157
	'-'  reduce 157
	'*'  reduce 157
	'/'  reduce 157
	'{'  reduce 157
	';'  reduce 157
	')'  reduce 157
	'>'  reduce 157
	'<'  reduce 157
	'='  reduce 157


state 37
	combinacion_terminales : CTE .  (158)

	.  reduce 158


state 38
	comparador : MAYOR_IGUAL .  (139)

	.  reduce 139


state 39
	comparador : MENOR_IGUAL .  (140)

	.  reduce 140


state 40
	comparador : DISTINTO .  (141)

	.  reduce 141


state 41
	combinacion_terminales : '-' . CTE  (159)

	CTE  shift 82
	.  error


state 42
	condicion_salto_if : '(' . comparacion_bool ')'  (127)
	condicion_salto_if : '(' . comparacion_bool  (129)
	condicion_salto_if : '(' . ')'  (131)

	ID  shift 36
	CTE  shift 37
	MAYOR_IGUAL  shift 38
	MENOR_IGUAL  shift 39
	DISTINTO  shift 40
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	')'  shift 83
	'>'  shift 43
	'<'  shift 44
	'='  shift 45
	.  error

	tipo  goto 46
	expresion  goto 47
	comparacion_bool  goto 84
	comparador  goto 50
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 43
	comparador : '>' .  (136)

	.  reduce 136


state 44
	comparador : '<' .  (137)

	.  reduce 137


state 45
	comparador : '=' .  (138)

	.  reduce 138


state 46
	expresion : tipo . '(' expresion '+' termino ')'  (149)
	expresion : tipo . '(' expresion '-' termino ')'  (150)
	expresion : tipo . '(' termino ')'  (151)
	expresion : tipo . '(' expresion '+' ')'  (152)
	expresion : tipo . '(' expresion '-' ')'  (153)

	'('  shift 85
	.  error


state 47
	comparacion_bool : expresion . comparador expresion  (132)
	comparacion_bool : expresion . comparador  (133)
	expresion : expresion . '+' termino  (146)
	expresion : expresion . '-' termino  (147)

	MAYOR_IGUAL  shift 38
	MENOR_IGUAL  shift 39
	DISTINTO  shift 40
	'+'  shift 86
	'-'  shift 87
	'>'  shift 43
	'<'  shift 44
	'='  shift 45
	.  error

	comparador  goto 88


state 48
	seleccion : IF condicion_salto_if . then_seleccion ENDIF  (114)
	seleccion : IF condicion_salto_if . then_seleccion else_seleccion ENDIF  (115)
	seleccion : IF condicion_salto_if . '{' ejecucion_control '}' else_seleccion ENDIF  (116)
	seleccion : IF condicion_salto_if . then_seleccion '{' ejecucion_control '}' ENDIF  (117)
	seleccion : IF condicion_salto_if . THEN ENDIF  (118)
	seleccion : IF condicion_salto_if . then_seleccion ELSE ENDIF  (119)
	seleccion : IF condicion_salto_if . THEN else_seleccion ENDIF  (120)

	THEN  shift 89
	'{'  shift 90
	.  error

	then_seleccion  goto 91


state 49
	condicion_salto_if : comparacion_bool . ')'  (128)
	condicion_salto_if : comparacion_bool .  (130)

	')'  shift 92
	THEN  reduce 130
	'{'  reduce 130


state 50
	comparacion_bool : comparador . expresion  (134)
	comparacion_bool : comparador .  (135)

	ID  shift 36
	CTE  shift 37
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	THEN  reduce 135
	'{'  reduce 135
	')'  reduce 135

	tipo  goto 46
	expresion  goto 93
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 51
	expresion : termino .  (148)
	termino : termino . '*' factor  (154)
	termino : termino . '/' factor  (155)

	'*'  shift 94
	'/'  shift 95
	ID  reduce 148
	THEN  reduce 148
	MAYOR_IGUAL  reduce 148
	MENOR_IGUAL  reduce 148
	DISTINTO  reduce 148
	'+'  reduce 148
	'-'  reduce 148
	'{'  reduce 148
	';'  reduce 148
	')'  reduce 148
	'>'  reduce 148
	'<'  reduce 148
	'='  reduce 148


state 52
	termino : factor .  (156)

	.  reduce 156


state 53
	factor : combinacion_terminales .  (160)

	.  reduce 160


state 54
	impresion : OUT CADENA .  (167)

	.  reduce 167


state 55
	impresion : OUT '(' . CADENA ')' ';'  (164)
	impresion : OUT '(' . ')'  (165)

	CADENA  shift 96
	')'  shift 97
	.  error


state 56
	header_funcion : FUN ID . '(' lista_parametros ')' ':' tipo  (17)
	header_funcion : FUN ID . '(' ')' ':' tipo  (18)
	header_funcion : FUN ID . '(' lista_parametros ')' tipo  (21)

	'('  shift 98
	.  error


state 57
	header_funcion : FUN '(' . lista_parametros ')' ':' tipo  (19)
	header_funcion : FUN '(' . ')' ':' tipo  (20)

	ID  shift 99
	ENTERO  shift 12
	DOUBLE  shift 13
	')'  shift 100
	.  error

	tipo  goto 101
	lista_parametros  goto 102
	parametro  goto 103


state 58
	seleccion_when : WHEN '(' . comparacion_bool ')' THEN '{' ejecucion_control '}' ';'  (83)
	seleccion_when : WHEN '(' . comparacion_bool ')' THEN sentencia_ejecutable ';'  (84)

	ID  shift 36
	CTE  shift 37
	MAYOR_IGUAL  shift 38
	MENOR_IGUAL  shift 39
	DISTINTO  shift 40
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	'>'  shift 43
	'<'  shift 44
	'='  shift 45
	.  error

	tipo  goto 46
	expresion  goto 47
	comparacion_bool  goto 104
	comparador  goto 50
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 59
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (85)
	iteracion_while : WHILE '(' . comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (86)

	ID  shift 36
	CTE  shift 37
	MAYOR_IGUAL  shift 38
	MENOR_IGUAL  shift 39
	DISTINTO  shift 40
	ENTERO  shift 12
	DOUBLE  shift 13
	'-'  shift 41
	'>'  shift 43
	'<'  shift 44
	'='  shift 45
	.  error

	tipo  goto 46
	expresion  goto 47
	comparacion_bool  goto 105
	comparador  goto 50
	termino  goto 51
	factor  goto 52
	combinacion_terminales  goto 53


state 60
	asignacion : ID . ASIGNACION expresion  (145)

	ASIGNACION  shift 34
	.  error


state 61
	lista_asignaciones : asignacion .  (143)

	.  reduce 143


state 62
	lista_asignaciones : lista_asignaciones . asignacion  (142)
	definicion_constante : CONST lista_asignaciones .  (144)

	ID  shift 60
	';'  reduce 144

	asignacion  goto 106


state 63
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (87)
	iteracion_while : ID . ':' WHILE '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (88)
	asignacion : ID . ASIGNACION expresion  (145)

	ASIGNACION  shift 34
	':'  shift 35
	.  error


state 64
	diferimiento : DEFER sentencia_ejecutable .  (70)

	.  reduce 70


state 65
	program : header_program '{' ejecucion '}' .  (1)

	.  reduce 1


state 66
	ejecucion : ejecucion sentencia .  (73)

	.  reduce 73


state 67
	lista_variables : ID .  (11)

	.  reduce 11


state 68
	declaracion_variables : tipo lista_variables . ';'  (6)
	lista_variables : lista_variables . ',' ID  (10)

	';'  shift 107
	','  shift 70
	.  error


state 69
	declaracion_variables : lista_variables ';' .  (8)

	.  reduce 8


state 70
	lista_variables : lista_variables ',' . ID  (10)

	ID  shift 108
	.  error


state 71
	declaracion_variables : definicion_constante ';' .  (7)

	.  reduce 7


72: shift/reduce conflict (shift 5, reduce 45) on error
72: shift/reduce conflict (shift 109, reduce 45) on ID
72: shift/reduce conflict (shift 110, reduce 45) on IF
72: shift/reduce conflict (shift 8, reduce 45) on OUT
72: shift/reduce conflict (shift 9, reduce 45) on FUN
72: shift/reduce conflict (shift 111, reduce 45) on RETURN
72: shift/reduce conflict (shift 112, reduce 45) on WHEN
72: shift/reduce conflict (shift 113, reduce 45) on WHILE
72: shift/reduce conflict (shift 12, reduce 45) on ENTERO
72: shift/reduce conflict (shift 13, reduce 45) on DOUBLE
72: shift/reduce conflict (shift 14, reduce 45) on CONST
72: shift/reduce conflict (shift 15, reduce 45) on DEFER
72: shift/reduce conflict (shift 114, reduce 45) on '}'
state 72
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' '}' ';'  (29)
	ejecucion_funcion : '{' . RETURN '(' expresion ')' ';' '}' ';'  (30)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion '}'  (31)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';'  (32)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion  (33)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' expresion ')' ';' bloque_funcion  (34)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';'  (35)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';' bloque_funcion  (36)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';' '}'  (37)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';' bloque_funcion '}'  (38)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';'  (39)
	ejecucion_funcion : '{' . bloque_funcion RETURN expresion ';' bloque_funcion  (40)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' ')' ';' '}'  (41)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' ')' ';' bloque_funcion '}'  (42)
	ejecucion_funcion : '{' . bloque_funcion RETURN '(' ')' ';'  (43)
	ejecucion_funcion : '{' . '}'  (44)
	ejecucion_funcion : '{' .  (45)
	ejecucion_funcion : '{' . RETURN ';' '}'  (46)
	ejecucion_funcion : '{' . RETURN ';' bloque_funcion '}'  (47)
	ejecucion_funcion : '{' . RETURN ';'  (48)
	ejecucion_funcion : '{' . RETURN ';' bloque_funcion  (49)
	ejecucion_funcion : '{' . RETURN '(' expresion ')' ';' bloque_funcion  (50)
	ejecucion_funcion : '{' . RETURN '(' expresion ')' ';'  (51)
	ejecucion_funcion : '{' . RETURN '(' ')' ';' '}'  (52)
	ejecucion_funcion : '{' . RETURN '(' ')' ';'  (53)

	error  shift 5
	ID  shift 109
	IF  shift 110
	OUT  shift 8
	FUN  shift 9
	RETURN  shift 111
	WHEN  shift 112
	WHILE  shift 113
	ENTERO  shift 12
	DOUBLE  shift 13
	CONST  shift 14
	DEFER  shift 15
	'}'  shift 114
	$end  reduce 45

	declaracion_variables  goto 18
	tipo  goto 19
	lista_variables  goto 20
	definicion_constante  goto 21
	sentencia_declarable  goto 22
	funcion  goto 23
	diferimiento  goto 24
	header_funcion  goto 25
	bloque_funcion  goto 115
	sentencia_funcion  goto 116
	sentencia  goto 117
	seleccion_funcion  goto 118
	seleccion_when_funcion  goto 119
	iteracion_while_funcion  goto 120
	asignacion  goto 27
	sentencia_ejecutable  goto 28
	seleccion  goto 29
	impresion  goto 30
	seleccion_when  goto 31
	iteracion_while  goto 32


state 73
	funcion : header_funcion ejecucion_funcion .  (15)

	.  reduce 15


state 74
	sentencia_ejecutable : asignacion ';' .  (77)

	.  reduce 77


state 75
	sentencia_ejecutable : seleccion ';' .  (78)

	.  reduce 78


state 76
	sentencia_ejecutable : impresion ';' .  (79)

	.  reduce 79


state 77
	sentencia_ejecutable : seleccion_when ';' .  (80)

	.  reduce 80


state 78
	sentencia_ejecutable : iteracion_while ';' .  (81)

	.  reduce 81


state 79
	asignacion : ID ASIGNACION expresion .  (145)
	expresion : expresion . '+' termino  (146)
	expresion : expresion . '-' termino  (147)

	'+'  shift 86
	'-'  shift 87
	ID  reduce 145
	';'  reduce 145
	')'  reduce 145


state 80
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' '{' ejecucion_iteracion '}' ';'  (87)
	iteracion_while : ID ':' WHILE . '(' comparacion_bool ')' ':' '(' asignacion ')' sentencia_ejecutable ';'  (88)

	'('  shift 121
	.  error


state 81
	factor : ID '(' . combinacion_terminales ',' combinacion_terminales ')'  (161)
	factor : ID '(' . combinacion_terminales ')'  (162)
	factor : ID '(' . ')'  (163)

	ID  shift 122
	CTE  shift 37
	'-'  shift 41
	')'  shift 123
	.  error

	combinacion_terminales  goto 124


state 82
	combinacion_terminales : '-' CTE .  (159)

	.  reduce 159


state 83
	condicion_salto_if : '(' ')' .  (131)

	.  reduce 131


state 84
	condicion_salto_if : '(' comparacion_bool . ')'  (127)
	condicion_salto_if : '(' comparacion_bool .  (129)

	')'  shift 125
	THEN  reduce 129
	'{'  reduce 129

